tests/integration/snapshots/integration__test_json__unexpected_escaped_character.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 

stdout --- 
<empty>
stderr --- 
error: unexpected character `\u000B`. expected start of a json value
 --> stdin:1:1
  |
1 | â‹
  | ^
